--- a/public/css/header-hover-effects.css
+++ b/public/css/header-hover-effects.css
@@ -1,44 +1,8 @@
-/* WhatsApp colors */
-#topbar .icofont-whatsapp {
-    color: #25D366 !important;
-}
 
-#topbar .a-whastapp {
-    color: #25D366 !important;
-}
-
-/* Social media icons colors */
-#topbar .social-links .facebook {
-    color: #3B5998 !important;
-}
-
-#topbar .social-links .instagram {
-    color: #E4405F !important;
-}
-
-#topbar .social-links .twitter {
-    color: #1DA1F2 !important;
-}
-
-#topbar .social-links .youtube {
-    color: #FF0000 !important;
-}
-
-#topbar .social-links .tiktok {
-    color: #000000 !important;
-}
-
-#topbar .social-links .threads svg {
-    fill: #000000 !important;
-}
-
-#topbar .social-links .bbb {
-    color: #000000 !important;
-}
 
 /* Hover effects */
 #topbar .icofont-whatsapp:hover {
-    color: #128C7E !important;
+    color: #25D366 !important;
 }
 
 #topbar .a-whastapp:hover {
@@ -46,7 +10,7 @@
 }
 
 #topbar .social-links .facebook:hover {
-    color: #1877F2 !important;
+    color: #2170c4 !important;
 }
 
 #topbar .social-links .instagram:hover {
@@ -54,7 +18,7 @@
 }
 
 #topbar .social-links .twitter:hover {
-    color: #0073B1 !important;
+    color: #1a9de3 !important;
 }
 
 #topbar .social-links .youtube:hover {
